# julia-mandelbrot

./: .gitignore  LICENSE  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  test_juliams.py
juliams/: __init__.py  config.py  data.py  profiles.py
juliams/analysis/: __init__.py  backtest.py  diagnostics.py  forward_returns.py  group_rebound.py  segments.py  transitions.py  walk_forward.py
juliams/data/: __init__.py  base.py  crypto.py  stock.py  utils.py
juliams/features/: __init__.py  ewma_calibration.py  fractal.py  hurst.py  tail.py  trend.py  volatility.py
juliams/output/: __init__.py  (+1 more)
scripts/: validate_dsm_across_assets.py
tests/: conftest.py  test_adaptive_thresholds.py  test_backtest_analysis.py  test_bocpd.py  test_bocpd_calibration.py  test_bocpd_student_t.py  test_classify_regimes_integration.py  test_cli_adaptive_overlays.py  test_cli_formatting.py  test_consensus.py  test_cpcv.py  test_data_sources.py  test_diagnostics_analysis.py  test_dsm_bocpd.py  test_dsm_gold_regression.py  test_dsm_quiet_asset.py  test_dsm_wiring.py  test_ewma_calibration.py  test_ewma_trend.py  test_fractal_features.py  test_fuzzy_regimes.py  test_gold_regime_regression.py  test_hurst_features.py  test_indicator_profiles.py  test_indicator_signal_flags.py  test_markov_regime.py  test_markov_vol_channel.py  test_min_dwell.py  test_multivariate_markov.py  test_public_api.py  test_regime_evaluation.py  test_tail_features.py  test_transitions.py  test_vol_tickers.py  test_volatility_features.py  test_walk_forward_adaptive.py  test_walk_forward_analysis.py
(+19 files in other folders)
