[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juliams"
version = "1.0.0"
description = "Julia Mandelbrot System for market regime classification with trend, volatility, Hurst, and fuzzy logic."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
    "statsmodels>=0.13.0",
    "scipy>=1.7.0",
    "nolds>=0.5.0",
    "scikit-fuzzy>=0.4.2",
    "networkx>=2.6",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4.0", "seaborn>=0.11.0", "plotly>=5.0.0"]
ta  = ["ta>=0.10.0"]
hmm = ["hmmlearn>=0.3.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0", "hmmlearn>=0.3.0"]

[tool.setuptools.packages.find]
include = ["juliams*"]
